[package]
name = "chrome_devtools_protocol"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async", "experimental", "all"]
async = ["futures"]
experimental = []

all = []
accessibility = ["dom"]
animation = ["dom", "runtime"]
application_cache = []
audits = ["network"]
background_service = []
browser = ["target"]
cache_storage = []
cast = []
console = ["runtime"]
css = ["dom"]
database = []
debugger = ["runtime"]
device_orientation = []
dom = ["runtime"]
dom_debugger = ["dom", "debugger", "runtime"]
dom_snapshot = ["css", "dom", "dom_debugger", "page"]
dom_storage = []
emulation = ["dom", "page", "runtime"]
fetch = ["network", "io", "page"]
headless_experimental = ["page", "runtime"]
heap_profiler = ["runtime"]
indexed_db = ["runtime"]
input = []
inspector = []
io = []
layer_tree = ["dom"]
log = ["runtime", "network"]
memory = []
network = ["debugger", "runtime", "security"]
overlay = ["dom", "page", "runtime"]
page = ["debugger", "dom", "io", "network", "runtime", "emulation"]
performance = []
profiler = ["runtime", "debugger"]
runtime = []
schema = []
security = []
service_worker = []
storage  = []
system_info = []
target = []
tethering = []
tracing = ["io"]
web_audio = []
web_authn = []

[dependencies]
base64 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = { version = "0.1", optional = true }

[dev-dependencies]
failure = "0.1"
structopt = "0.2"
url = "2.1"
reqwest = "0.9"
websocket = "0.23"

[build-dependencies]
failure = "0.1"
indented = "0.1"
pdl = { version = "0.1", path = "../rust-pdl" }
case = { version = "1.0", git = "https://github.com/flier/case.git", branch = "abbr" }
